<resources>
    <string name="app_name">Fruitmate</string>
    <string name="nama">Nama</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="about">About</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_scan">Scan</string>
    <string name="name_required_error">Nama Perlu Diisi</string>
    <string name="cek_kematangan_buah">Cek Kematangan Buah</string>
    <string name="desc_about_app">Aplikasi FruitMate merupakan aplikasi yang bisa membantu mendeteksi tingkat kematangan buah. Dilengkapi dengan fitur tambahan seperti berita, informasi buah, informasi penyimpanan buah, dan perawatan tanaman.</string>
    <string name="desc_perawatan_pohon">Perawatan pohon apel membutuhkan beberapa langkah penting. Pertama, pastikan untuk menanam pohon apel di lokasi yang mendapatkan sinar matahari penuh dan memiliki drainase yang baik. Selanjutnya, jaga agar tanah di sekitar pohon tetap lembab dengan penyiraman yang cukup, terutama selama fase pertumbuhan aktif dan musim kering. Selain itu, berikan pemupukan yang tepat menggunakan pupuk yang mengandung nitrogen, fosfor, dan kalium. Lakukan pemangkasan pada musim dingin untuk menjaga bentuk pohon, meningkatkan sirkulasi udara, dan merangsang pertumbuhan tunas baru. Selalu perhatikan tanda-tanda serangan hama atau penyakit pada pohon apel dan lakukan pengendalian yang tepat jika diperlukan. Terakhir, saat buah apel sudah matang, panenlah dengan hati-hati dan pastikan tidak merusak buah saat memetiknya. Dengan merawat pohon apel secara hati-hati dan konsisten, Anda dapat memastikan kesehatan pohon dan panen yang melimpah.</string>
    <string name="desc_penyimpanan_apel">Untuk menyimpan buah apel yang sudah dipanen, berikut adalah beberapa alternatif langkah yang bisa Anda ikuti:\n\n1. Pilih apel yang matang: Pastikan untuk memilih apel yang matang sepenuhnya dan bebas dari kerusakan atau tanda-tanda pembusukan.\n\n2. Periksa apel secara menyeluruh: Periksa setiap apel untuk memastikan tidak ada yang rusak atau terinfeksi oleh hama atau penyakit. Apel yang rusak atau terinfeksi dapat mempercepat pembusukan buah yang lain di sekitarnya.\n\n3.Pisahkan apel yang rusak: Jika Anda menemukan apel yang rusak atau membusuk, segera pisahkan dari yang lainnya. Buang apel yang rusak agar tidak mempengaruhi apel yang lain.\n\n4. Simpan di suhu yang tepat: Apel biasanya disimpan pada suhu rendah dan lembap untuk memperlambat pematangan dan mempertahankan kesegaran. Suhu ideal untuk penyimpanan apel adalah sekitar 0-4 derajat Celsius (32-39 derajat Fahrenheit). Anda dapat menggunakan lemari es atau kulkas untuk menyimpannya. Pastikan juga kelembapan relatif di sekitar 90% agar apel tidak mengering.\n\n5. Jaga agar tetap terpisah: Usahakan agar apel-apel tidak saling bersentuhan saat disimpan. Ini membantu mencegah penyebaran pembusukan jika satu apel rusak.\n\n6. Periksa secara berkala: Periksa apel-apel yang disimpan secara berkala untuk mengidentifikasi apel yang mulai membusuk. Buang apel yang rusak segera untuk mencegah penyebaran pembusukan.\n\n7.Pilihan alternatif: Jika Anda memiliki jumlah apel yang besar, Anda juga dapat mempertimbangkan metode lain seperti pengeringan atau pengawetan untuk memperpanjang umur simpannya.  Selalu perhatikan kondisi dan kualitas apel yang disimpan agar Anda dapat mengonsumsi buah-buahan yang segar dan lezat dalam jangka waktu yang lebih lama.</string>
    <string name="desc_buah_matang">Buah apel telah mencapai tahap kematangan optimalnya. Saat apel matang, kulitnya biasanya memiliki warna yang cerah dan merata, terasa kencang ketika dipegang, dan memiliki aroma yang khas. Selain itu, apel matang juga memiliki tekstur daging buah yang renyah dan rasanya manis dengan sedikit rasa asam.</string>
    <string name="desc_buah_busuk">Buah apel telah mengalami proses pembusukan dan tidak lagi layak dikonsumsi. Ketika apel membusuk, kulitnya mungkin berubah menjadi lembek, berkerut, dan berubah warna menjadi coklat atau hitam. Selain itu, aroma busuk dan bau yang tidak sedap juga akan tercium.</string>
    <string name="desc_buah_belum_matang">Buah apel yang belum matang atau unripe memiliki ciri-ciri yang khas. Kulitnya masih berwarna hijau cerah dan terasa sedikit keras saat disentuh. Dagingnya juga masih tegar dan padat, dengan rasa yang lebih asam atau masam manis daripada apel yang matang. Ketika dipotong, dagingnya seringkali berwarna lebih pucat dan memiliki tekstur yang renyah. Meskipun belum mencapai tingkat kemanisan yang maksimal, apel unripe ini masih memberikan kesegaran dan kesegaran alami yang menyegarkan lidah.</string>
    <string name="belum_ada_riwayat_scan_buah">Belum ada riwayat scan buah.</string>
</resources>