<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.tesfirebase.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.capstone.tesfirebase.ui.main.profile.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.capstone.tesfirebase.ui.main.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

</navigation>