<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.capstone.tesfirebase.ui.register.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo_fruitmate_full" />

        <EditText
            android:id="@+id/inputName"
            android:background="@drawable/round_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:drawableStart="@drawable/baseline_man_24"
            android:inputType="text"
            android:hint="@string/nama"
            android:drawablePadding="8dp"/>

        <com.capstone.tesfirebase.customview.EmailEditText
            android:id="@+id/inputEmail"
            android:transitionName="inputemail"
            android:background="@drawable/round_edit_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputName" />

        <com.capstone.tesfirebase.customview.PasswordEditText
        android:id="@+id/inputPassword"
        android:transitionName="inputpassword"
        android:background="@drawable/round_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <Button
            android:id="@+id/btn_register"
            android:transitionName="button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textSize="18sp"
                android:transitionName="text1" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/masuk"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:transitionName="text2" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/btn_register"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toTopOf="@id/btn_register"
            android:elevation="2dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>